# reading-log

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  railway.json  run.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app/: __init__.py  main.py
app/api/: __init__.py  reading_logs.py  sessions.py
app/db/: __init__.py  connection.py  database.py  init_db.py
app/models/: __init__.py  reading_log.py  session.py
app/schemas/: session.py
app/support/: logging_support.py
play/: Makefile  run.py
play/app/: main.py
play/app/db/: connection.py  init_db.py
play/app/models/: session.py
play/app/schemas/: session.py
play/frontend/: README.md  package-lock.json  vite.config.ts
play/frontend/src/routes/: +page.svelte
scripts/: check_db.py  check_tables.py  debug_port.py  direct_db_check.py  init_db.py  migrate_db.py  postgres_diagnostic.py  railway_migrate.py  railway_start.py  run_app.py  test_api.py
